# interface_with_concepts

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CIShape.hpp  Rectangle.hpp  Square.hpp  main.cpp
